--- a/net/Makefile
+++ b/net/Makefile
@@ -155,6 +155,7 @@
     SUBDIR += gaim
     SUBDIR += gale
     SUBDIR += gatekeeper
+    SUBDIR += gdesklets-networkinfo
     SUBDIR += gdesklets-rssgrab
     SUBDIR += gdesklets-sensor-psi_network
     SUBDIR += gdesklets-sensor-psi_ping
