--- a/converters/cn2jp/Makefile
+++ b/converters/cn2jp/Makefile
@@ -8,7 +8,7 @@
 PORTNAME=	cn2jp
 PORTVERSION=	1.4b
 PORTREVISION=	3
-CATEGORIES=	converters chinese japanese
+CATEGORIES=	converters
 MASTER_SITES=	http://w3.sys.es.osaka-u.ac.jp/~seke/software/cn2jp/
 DISTNAME=	${PORTNAME}${PORTVERSION}
 
@@ -17,15 +17,17 @@ COMMENT=	A library for code translation between Chinese and Japanese
 
 INSTALLS_SHLIB=	yes
 WRKSRC=		${WRKDIR}/${PORTNAME}
-
+PORTDOCS=	README
 TEST_PROGRAM=	big2gb/b2g big2jis/b2j gb2big/g2b gb2jis/g2j jis2big/j2b jis2gb/j2g
 
 do-install:
 .for test_program in ${TEST_PROGRAM}
 	@${INSTALL_PROGRAM} ${WRKSRC}/${test_program} ${PREFIX}/bin
 .endfor
-	@${MKDIR} ${PREFIX}/share/cn2jp
-	@${INSTALL_DATA} ${WRKSRC}/README ${PREFIX}/share/cn2jp/README
+.if !defined(NOPORTDOCS)
+	@${MKDIR} ${DOCSDIR}
+	@${INSTALL_DATA} ${WRKSRC}/README ${DOCSDIR}/README
+.endif
 	@${INSTALL_DATA} ${WRKSRC}/libcn2jp.a ${PREFIX}/lib
 	@${INSTALL_DATA} ${WRKSRC}/libcn2jp.so ${PREFIX}/lib/libcn2jp.so.1
 	@cd ${PREFIX}/lib/; ${LN} -sf libcn2jp.so.1 libcn2jp.so
