--- a/benchmarks/ttcp/Makefile
+++ b/benchmarks/ttcp/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	ttcp
 PORTVERSION=	1.12
-CATEGORIES=	net
+CATEGORIES=	net benchmarks
 MASTER_SITES=	ftp://ftp.sgi.com/sgi/src/ttcp/
 DISTFILES=	ttcp.c ttcp.1 README
 
