--- a/misc/instant-workstation/Makefile
+++ b/misc/instant-workstation/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	instant-workstation
 PORTVERSION=	1.0
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	misc
 MASTER_SITES=	ftp://ftp.lemis.com/pub/
 
@@ -34,7 +34,6 @@ RUN_DEPENDS=	acroread:${PORTSDIR}/print/acroread5 \
 		ispell:${PORTSDIR}/textproc/ispell \
 		startkde:${PORTSDIR}/x11/kde3 \
 		mkisofs:${PORTSDIR}/sysutils/mkisofs \
-		mount_smbfs:${PORTSDIR}/net/smbfs \
 		mutt:${PORTSDIR}/mail/mutt \
 		mozilla:${PORTSDIR}/www/mozilla \
 		${LOCALBASE}/sbin/postfix:${PORTSDIR}/mail/postfix \
@@ -45,6 +44,12 @@ RUN_DEPENDS=	acroread:${PORTSDIR}/print/acroread5 \
 NO_WRKSUBDIR=	YES
 NO_BUILD=	YES
 
+.include <bsd.port.pre.mk>
+
+.if ${OSVERSION} <= 440002
+RUN_DEPENDS+=	mount_smbfs:${PORTSDIR}/net/smbfs
+.endif
+
 pre-fetch:
 .if !defined(WITH_GHOSTSCRIPT_AFPL) || ${WITH_GHOSTSCRIPT_AFPL} != yes
 	@${ECHO} ""
@@ -53,4 +58,4 @@ pre-fetch:
 	@${ECHO} ""
 .endif
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
