--- a/www/apache2/Makefile
+++ b/www/apache2/Makefile
@@ -74,16 +74,6 @@ USE_OPENSSL=	yes
 CONFIGURE_ARGS+=	--enable-static-support
 .endif
 
-# Untested and may fail !
-.if defined(WITH_APR_FROM_PORTS)
-.    if defined (WITH_BDB) || defined(WITH_BERKELEYDB)
-BROKEN=			"You can't set WITH_BDB or WITH_BERKELEYDB when WITH_APR_FROM_PORTS is defined"
-.endif	
-LIB_DEPENDS+=		apr-0.9:${PORTSDIR}/devel/apr
-CONFIGURE_ARGS+=	--with-apr=${LOCALBASE}/bin/apr-config \
-                	--with-apr-util=${LOCALBASE}/bin/apr-config
-.endif
-
 # for slave ports
 .if !defined(MASTERDIR)
 APACHEDIR=	${.CURDIR}
@@ -99,6 +89,22 @@ CONFIGURE_ARGS+=	--with-ldap \
 .endif
 
 .include <bsd.port.pre.mk>
+
+# Untested and may fail !
+.if defined(WITH_APR_FROM_PORTS)
+.    if defined (WITH_BDB) || defined(WITH_BERKELEYDB)
+BROKEN=			"You can't set WITH_BDB or WITH_BERKELEYDB when WITH_APR_FROM_PORTS is defined"
+.endif
+LIB_DEPENDS+=		apr-0.9:${PORTSDIR}/devel/apr
+CONFIGURE_ARGS+=	--with-apr=${LOCALBASE}/bin/apr-config \
+					--with-apr-util=${LOCALBASE}/bin/apr-config
+.else
+.   if exists(${LOCALBASE}/lib/libapr-0.so)
+BROKEN=				"apr is installed and may conflict with apache one\
+					(if you want to use apr port define WITH_APR_FROM_PORTS,\
+					at your own risk)"
+.   endif
+.endif
 
 .include "${APACHEDIR}/Makefile.doc"
 .include "${APACHEDIR}/Makefile.modules"
